Change optgroup label in mapSelector

--- a/index.html
+++ b/index.html
@@ -64,12 +64,9 @@
       
       <div class="label">Analisi del Movimento</div>
       <select id="mapSelector" onchange="document.getElementById('bioframe').src = this.value">
-        <optgroup label="Movimenti Dinamici">
+        <optgroup label="Selezionati per Te">
           <option value="https://human.biodigital.com/widget/?be=production/maleAdult/abdominal_anterior_flexion_extension&lang=it">Flessione/Estensione Addome</option>
-        </optgroup>
-        <optgroup label="Anatomia Statica">
           <option value="https://human.biodigital.com/widget/?be=4Oq0&uaid=3Yfre&lang=it">Muscoli della Corsa</option>
-          <option value="https://human.biodigital.com/widget/?be=2b5y&uaid=3Yfre&lang=it">Anatomia Totale Muscolare</option>
         </optgroup>
       </select>
     </div>
